syntax = "proto3";

package protos;

option go_package = "github.com/streamdal/snitch-protos/build/go/protos";

service Public {
  // Build a service map
  rpc GetServices(GetServicesRequest) returns (GetServicesResponse);

  // Get all available pipelines
  rpc GetPipelines(GetPipelinesRequest) returns (GetPipelinesResponse);

  // Get a pipeline (and its steps)
  rpc GetPipeline(GetPipelineRequest) returns (GetPipelineResponse);

  // Associate steps with a pipeline
  rpc UpdatePipeline(UpdatePipelineRequest) returns (UpdatePipelineResponse);

  // Delete a pipeline
  rpc DeletePipeline(DeletePipelineRequest) returns (DeletePipelineResponse);

  // Get steps associated with a pipeline
  rpc GetSteps(GetStepsRequest) returns (GetStepsResponse);

  // Create a step
  rpc CreateStep(CreateStepRequest) returns (CreateStepResponse);

  // Update a step
  rpc UpdateStep(UpdateStepRequest) returns (UpdateStepResponse);

  // Delete a step
  rpc DeleteStep(DeleteStepRequest) returns (DeleteStepResponse);
}

// protolint:disable INDENT
message GetServicesRequest {}
message GetServicesResponse {}
message GetPipelinesRequest {}
message GetPipelinesResponse {}
message GetPipelineRequest {}
message GetPipelineResponse {}
message UpdatePipelineRequest {}
message UpdatePipelineResponse {}
message DeletePipelineRequest {}
message DeletePipelineResponse {}
message GetStepsRequest {}
message GetStepsResponse {}
message CreateStepRequest {}
message CreateStepResponse{}
message UpdateStepRequest {}
message UpdateStepResponse {}
message DeleteStepRequest {}
message DeleteStepResponse {}
